2009-06-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Update description of connection object xrep.

	* doc/guile-pg.twerp (Database Connections): For unix-domain
	connections, mention that "host" is the socket directory name.

2009-06-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[config] Avoid "test -a" in configure.in.

	* configure.in: Use test A && test B, instead of test A -a B.

2009-06-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[config] Trim `EXTRA_DIST' in Makefile.am files.

	* Makefile.am (EXTRA_DIST): Delete THANKS.
	* doc/Makefile.am (EXTRA_DIST): Delete twerp.mk-am-frag.

2009-06-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Zonk HACKING, TODO; nfc.

	* HACKING: Delete file.
	* TODO: Delete file.
	* Makefile.am (EXTRA_DIST): Delete HACKING, TODO.

2009-06-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	New (database postgres) proc: pg-mblen

	* doc/guile-pg.twerp (Miscellaneous): Add @twerpdoc for `pg-mblen'.
	(Not Included): Remove `PQmblen'.
	* configure.in (AC_CHECK_DECLS): Add check for `pg_char_to_encoding'.

2009-06-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Update table of unaddressed interface elements.

	* doc/guile-pg.twerp (Not Included): Add entries for
	`PQdisplayTuples', `PQprintTuples', `PQmblen', `PQenv2encoding'.

2009-06-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[config] Specify Automake 1.11, Libtool 2.2.6.

	* configure.ac (AM_INIT_AUTOMAKE): Specify "1.11".
	(LT_PREREQ): Specify "2.2.6".

2009-04-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Move table of contents after the title page.

	* doc/guile-pg.twerp: Move @contents; delete @summarycontents.

2008-08-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Remove support for unused SCM_OUTPORTP.

	* build-aux/guile-pg.m4 (AC_GUILE_PG_FCOMPAT):
	Delete AC_LINK_IFELSE check for `SCM_OUTPORTP'
	and the related `HAVE_SCM_OUTPORTP' AC_DEFINE.

2008-08-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Assume system provides tmpfile(3).

	* configure.in (tmpfile): Delete this AC_CHECK_FUNCS.
